# AI-Intern-technical-Assessment

./: README.md
fastapi-chatbot-app/: .gitignore  README.md  docker-compose.yml
fastapi-chatbot-app/backend/: Dockerfile  pyproject.toml  requirements.txt
fastapi-chatbot-app/backend/app/: config.py  main.py
fastapi-chatbot-app/backend/app/api/: routes.py
fastapi-chatbot-app/backend/app/services/: chain.py  document_ingestion.py  embeddings.py  gemini_service.py  memory.py  qdrant_service.py
fastapi-chatbot-app/frontend/: Dockerfile  pyproject.toml  streamlit_app.py
